Renamed the files

--- a/new.html
+++ b/new.html
@@ -41,7 +41,7 @@
 <body>
 
   <div class="learning-container">
-    <form action="cse 326 html.html">
+    <form action="index.html">
     <button class="learning-text">Start Learning!</button>
     </form>
   </div>
