--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
       <a href="#" class="logo">
         <img
-          src="phototabbar.png"
+          src="resources/phototabbar.png"
           alt="LangPlus"
         />
       </a>
@@ -49,7 +49,7 @@
       <div class="home-img">
         <img
           id="image"
-          src="photos2.svg"
+          src="resources/photos2.svg"
           alt=""
         />
       </div>
@@ -98,14 +98,14 @@
       </div>
       <div class="categories-content">
         <div class="box">
-          <img src="photos5.svg" alt="" />
+          <img src="resources/photos5.svg" alt="" />
           <h3>Introduction to Java</h3>
           <p style="color:blue">50+ hours video lectures with online tests</p>
         </div>
 
         <div class="box">
           <img
-            src="photos1.jpg"
+            src="resources/photos1.jpg"
             alt=""
           />
           <h3>100 days of Python</h3>
@@ -114,7 +114,7 @@
 
         <div class="box">
           <img
-            src="cssphoto.svg"
+            src="resources/cssphoto.svg"
             alt=""
           />
           <h3>Introduction to Web Development: HTML,CSS</h3>
@@ -136,7 +136,7 @@
       <div class="courses-content">
         <div class="row">
           <img
-            src="jsphoto.svg"
+            src="resources/jsphoto.svg"
             alt=""
           />
           <div class="courses-text">
@@ -161,7 +161,7 @@
 
         <div class="row">
           <img
-            src="c++photo.svg"
+            src="resources/c++photo.svg"
             alt=""
           />
           <div class="courses-text">
@@ -185,7 +185,7 @@
         </div>
 
         <div class="row">
-          <img src="cplusphoto.svg" alt="" />
+          <img src="resources/cplusphoto.svg" alt="" />
           <div class="courses-text">
             <h3>Complete Web Development Course</h3>
             <h5>Free</h5>
@@ -216,10 +216,6 @@
 
     <section class="about" id="about">
       <div class="about-img">
-        <img
-          src="/Full Stack Development/html/LMS/About us page-rafiki.svg"
-          alt=""
-        />
       </div>
 
       <div class="about-text">
